[build-system]
build-backend = "pdm.backend"
requires = [ "pdm-backend" ]

[project]
name = "zeed-guilib"
version = "0.0.14"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.14"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pyside6-addons>=6.10",
    "pyside6-essentials>=6.10",
    "pythonqwt>=0.14.4",
]
urls.Homepage = "https://github.com/ZeeD/guilib"
urls.Repository = "https://github.com/ZeeD/guilib.git"

[dependency-groups]
dev = [
    "coverage>=7.5.4",
    "mypy>=1.10",
    "pyproject-fmt>=2.3",
    "ruff>=0.4.10",
    "setuptools>=70.1",
]

[tool.pdm]
distribution = true
plugins = [ "pdm-bump" ]
build.excludes = [ "tests" ]
scripts._.env = { PYTHONPATH = "src:tests:stubs" }
scripts.lint = { composite = [
    "pyproject-fmt pyproject.toml",
    "ruff format {args:.}",
    "ruff check {args:.}",
    "mypy {args:.}",
], keep_going = true }
scripts.test = { composite = [
    "coverage run -m unittest discover --verbose --locals --failfast --catch --start-directory tests {args}",
    "coverage report",
    "coverage erase",
] }
scripts.bump_and_publish = { composite = [
    "pdm bump patch --commit --tag",
    "pdm publish",
    "git push",
    "git push --tags",
] }

[tool.ruff]
line-length = 80
src = [ "src", "stubs", "tests" ]
fix = true
format.quote-style = "single"
format.skip-magic-trailing-comma = true
format.docstring-code-format = true
lint.select = [ "ALL" ]
lint.ignore = [
    "ANN1",
    "COM812",
    "D1",
    "D203",
    "D213",
    "ISC001",
    "PT009",
    "PT027",
    "Q001",
    "Q002",
    "TD002",
    "TD003",
]
lint.extend-per-file-ignores."stubs/**/*.pyi" = [
    "FBT001",
    "FBT002",
    "N802",
    "N803",
    "N815",
    "PLR0913",
]
lint.flake8-annotations.allow-star-arg-any = true
lint.flake8-quotes.docstring-quotes = "single"
lint.flake8-quotes.inline-quotes = "single"
lint.flake8-quotes.multiline-quotes = "single"
lint.flake8-type-checking.quote-annotations = true
lint.isort.force-single-line = true

[tool.pyproject-fmt]
column_width = 80
indent = 4

[tool.coverage]
run.branch = true
run.source = [ "src", "tests" ]
report.show_missing = true
report.skip_empty = true
report.sort = "Cover"

[tool.mypy]
mypy_path = [ "src", "tests", "stubs" ]
strict = true
warn_unused_configs = true
